Changing Sonar properties Adding new configurations

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,7 @@
-sonar.projectKey=<sonar-project-key>
-sonar.organization=<sonar-organization>
+sonar.projectKey=LucasCVilasBoas_sonar_template_repo
+sonar.organization=lucascvilasboas
  
 sonar.python.coverage.reportPaths=coverage.xml
+
+sonar.projectName=Template Sonarcloud cI-based with Coverage
+sonar.projectVersion=1.0
