--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,6 @@ skipsdist = True
 deps =
     pytest
     coverage
-commands = pytest --cov=sonar_template_repo --cov-report=xml --cov-config=tox.ini --cov-branch
+commands = pytest --cov=adder.py --cov-report=xml --cov-config=tox.ini --cov-branch
  
 [coverage:run]
