Adding coverage omission configuration

--- a/tox.ini
+++ b/tox.ini
@@ -8,9 +8,15 @@ deps =
     coverage
 commands =
     coverage run -m pytest
-    coverage xml
+    coverage html
  
 [coverage:run]
 relative_files = True
 source = adder
 branch = True
+omit = 
+    */site-packages/*
+    */distutils/*
+    *usr/*
+    tests/*
+    test_*
