Modifying tox file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=LucasCVilasBoas_sonar_template_repo
 sonar.organization=lucascvilasboas
  
-sonar.python.coverage.reportPaths=coverage.html
+sonar.python.coverage.reportPaths=coverage.xml
 
 sonar.projectName=Template Sonarcloud CI-based with Coverage
 sonar.projectVersion=1.0
