--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     coverage
 commands =
     coverage run -m pytest
-    coverage html
+    coverage xml
  
 [coverage:run]
 relative_files = True
