--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.python.coverage.reportPaths=coverage.xml
 
 sonar.projectName=Template Sonarcloud cI-based with Coverage
 sonar.projectVersion=1.0
+sonar.python.version=3
